jpress v2.0-rc.8:
新增：新增插件代码生成直接生成后台UI的功能
新增：超级管理员可以在后台修改任何人的密码的功能，用于帮助用户人工的方式找回密码
优化：优化 ImageUtils 的部分代码
优化：优化插件 AddonManager 的部分逻辑代码，更加易于理解和阅读
优化：优化Sitemap的代码逻辑
优化：完善markdown编辑器滚动条默认位置设置，感谢 [@whoismy8023](https://gitee.com/whoismy8023)
优化：优化docker-compose启动JPress的时候，当配置模板映射时无法使用系统内置的模板的问题
优化：升级内核JFinal到3.8和Jboot到2.0.6 最新版本
优化：优化 Ckeditor 插入图片时，当图片过大会导致文字被挤压没有良好文字编写体验的问题
修复：修复在JPress后台升级插件在某些情况下无法正确升级的问题
修复：修复ModuleUIGenerator用于生成UI代码时，会导致部分数据无法正确提交的问题
修复：修复模板在templates的多级目录下，无法正常加载的问题
修复：修复文章更新状态的时候，前台由于缓存的原因无法及时更新的问题
修复：修复Sitemap只有重启JPress才生效，重启后新增文章Sitemap无法及时更新的问题
修复：修复Seo的百度实时提交不带域名导致提交的URL错误的问题
修复：修复子目录的sitmap渲染可能出现空指针异常的问题
修复：修复解决SmartField addAttr属性不生效的问题，感谢 [@ZJWave](https://gitee.com/zjwave)
修复：在window下，当用户通过个人中心上传头像后，无法在前台渲染的问题
修复：自定义ContextPath场景下，后台菜单权限逻辑错误问题
修复：通过后台的标签模块新增标签的时候，可以新增重复标签的问题



jpress v2.0-rc.7:
新增：robots.txt 的支持
新增：sitemap 功能
新增：baidu 和 Google 的自动 ping 提交的功能
新增：baidu seo 自动实时 push 和 update 的功能
新增：用户登录成功的跳转配置
新增：#hasAddon() 指令 和 hasAddon() 模板方法，用于对当前应用是否启用了某个 JPress 插件。
优化：优化 jpress 数据表结构，使其更加合理。
优化：优化 Module 二次开发的代码生成器 ModuleGenerator
优化：升级 JFinal 到最新版本 3.7，升级 Jboot 到最新版本 2.0.3
优化：删除 CommonsUtils 中的 escapeHtml 方法，使用 StrUtil 替代
优化：删除 ControllerBase 中的 getParaSet 等无用的 Action
优化：Utm 存储任务 UtmBatchSaveTask 修改为 1分钟已提交一次，同时修复可能存在的线程安全问题
优化：对 AddonUtil 进行重构，使之更加简单合理
优化：调整 分类、标签 显示到菜单的交互逻辑，使之更加直观。感谢 [@喜欢吃豆包](https://gitee.com/litongclub)
优化：当对网站菜单进行删除的时候，弹出提示框，防止误删的问题
优化：JPressOptions 的 get() 方法添加返回默认值的支持
优化：当微信小程序等客户端通过 api 读取文章时，无法获取文章作者的问题。感谢 [@喜欢吃豆包](https://gitee.com/litongclub)
优化：优化 tomcat maven 模块的 pom.xml ，防止 打包tomcat的时候自动打包无用的配置文件。
优化：优化 #para 指令，删除其无用的代码逻辑
优化：修改 AddonInfo 的 isStart() 方法为 isStarted()
修复：当在同一个机器上部署多个 JPress，通过 jpress.sh 去关闭 jpress 时，会导致多个 JPress 应用同时关闭的问题。感谢 [@900](https://gitee.com/upwind)
修复：菜单 填写 html 的 icon 时，可能出现错误的问题
修复：WordPress 文章导入时，可能存在数据丢失的问题。感谢 [@xiyoufang](https://gitee.com/xiyoufang)
修复：通过 微信、QQ 等进行 Oauth 登录成功之后，跳转的路径错误的问题
修复：用户中心的登录页面，在二级目录下会出现部分css无法正确显示的问题
修复：微信运营插件 启用后，无法对其进行关闭的问题