@@ -1,6 +1,7 @@
 jpress v2.0-rc.8:
 新增：新增插件代码生成直接生成后台UI的功能
 新增：超级管理员可以在后台修改任何人的密码的功能，用于帮助用户人工的方式找回密码
+新增：在ControllerBase里新增render404If方法，是代码更加简洁
 优化：优化 ImageUtils 的部分代码
 优化：优化插件 AddonManager 的部分逻辑代码，更加易于理解和阅读
 优化：优化Sitemap的代码逻辑
